# xrsl.github.io

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cspell.toml  justfile  mkdocs.yml  pyproject.toml  zensical.toml
archive/: cv-build-system.md  zensical-toml-sites.md
docs/: about.md  agentic-workflows.md  amazing-rust-tools.md  index.md  multi-provider-ai.md  toml-first-workflow.md
docs/blog/: .authors.yml
docs/blog/posts/: 2025-10-28-python-tips.md  2025-11-01-building-with-mkdocs.md  2025-11-02-getting-started.md
